# homilyDatabase

./: .gitignore  .gitmodules  CMakeLists.txt  homilyDatabase.db  main.cpp
classes/: Database.cpp  Database.h  DatabaseRow.h  FileHandling.h  RestbedServer.cpp  RestbedServer.h  SiglumPair.h  SimpleSiglum.h  SingleHomily.h  Tools.cpp  Tools.h
htmls/: addForm.html  deleteForm.html  displaySingle.html  index.html
libs/HTMLEntitiesToUTF8/: CMakeLists.txt  entities.c  entities.h
